blur.tv movies v3

--- a/Item-Details.html
+++ b/Item-Details.html
@@ -60,7 +60,9 @@
             <ui class="listAside">
                 <li class="listItem"><i class="fa-light fa-house fa-lg mr-4"></i> <a href="./index.html">Home</a></li>
                 <li class="listItem"><i class="fa-regular fa-chart-line-up fa-lg mr-4"></i> <a href="#">News</a></li>
-                <li class="listItem"><i class="fa-light fa-gear fa-lg mr-4"></i> <a class="text-white" href="#">Settings</a></li>
+                <li class="listItem"><i class="fa-light fa-user fa-lg mr-4"></i> <a class="text-white" href="#">Profile</a></li>
+                <li class="listItem"><i class="fa-light fa-screwdriver-wrench fa-lg mr-4"></i></i> <a href="#">Admin</a></li>
+                <li class="listItem"><i class="fa-light fa-coins fa-lg mr-4"></i><a href="#"> Pricing plans</a></li>
                 <li class="listItem"><i class="fa-light fa-file-signature fa-lg mr-4"></i> <a href="#">Contacts</a></li>
                 <li class="listItem"><i class="fa-light fa-siren-on fa-lg mr-4"></i> <a href="#">Privacy policy</a></li>
                 <li class="listItem"><i class="fa-light fa-gear fa-lg mr-4"></i> <a href="#">About-Us</a></li>
@@ -107,7 +109,7 @@
         </section>
         <div class="container-custom">
             <!-- logo -->
-            <div class="logo">Blur.<span>TV</span></div>
+            <a href="./index.html" class="logo">Blur.<span>TV</span></a>
             <!-- tools nsv -->
             <div class="d-md-none d-lg-inline-block toolsNav">
                 <ui class="item-nav d-none d-md-flex">
@@ -135,7 +137,17 @@
                             <a href="#">Anime Series</a>
                         </div>
                     </li>
-                    <li><a href="#">More</a> <i class="fa-light fa-chevron-down fa-xs"></i></li>
+                    <li class="position-relative">
+                        <a class="hvr" href="">More</a> <i class="fa-light fa-chevron-down fa-xs"></i>
+                        <div class="dropdownList">
+                            <a href="#">Admin</a>
+                            <a href="#">Profile</a>
+                            <a href="#">Contacts</a>
+                            <a href="#">Privacy policy</a>
+                            <a href="#">About-Us</a>
+                            <a href="#">Pricing plans</a>
+                        </div>
+                    </li>
                 </ui>
             </div>
            <!-- icons -->
@@ -338,9 +350,9 @@
                             <p class="btntype">Action</p>
                             <p class="btntype">Fantasy</p>
                         </section>
-                        <section class="boxTrailer d-none-990">
+                        <section class="boxTrailer">
                             <a href="#" class="btntype"><i class="fa-regular fa-eye fa-sm"></i> <span>82.K</span></a>
-                            <a href="#" class="btntype"><i class="fa-duotone fa-play"></i> <span>TRAILER</span></a>
+                            <a href="#" class="btntype btnTrailer"><i class="fa-duotone fa-play"></i> <span>TRAILER</span></a>
                         </section>
                     </div>
                 </div>
@@ -369,9 +381,9 @@
                             <p class="btntype">Action</p>
                             <p class="btntype">Fantasy</p>
                         </section>
-                        <section class="boxTrailer d-none-990">
+                        <section class="boxTrailer">
                             <a href="#" class="btntype"><i class="fa-regular fa-eye fa-sm"></i> <span>82.K</span></a>
-                            <a href="#" class="btntype"><i class="fa-duotone fa-play"></i> <span>TRAILER</span></a>
+                            <a href="#" class="btntype btnTrailer"><i class="fa-duotone fa-play"></i> <span>TRAILER</span></a>
                         </section>
                     </div>
                 </div>
@@ -400,9 +412,9 @@
                             <p class="btntype">Action</p>
                             <p class="btntype">Fantasy</p>
                         </section>
-                        <section class="boxTrailer d-none-990">
+                        <section class="boxTrailer">
                             <a href="#" class="btntype"><i class="fa-regular fa-eye fa-sm"></i> <span>82.K</span></a>
-                            <a href="#" class="btntype"><i class="fa-duotone fa-play"></i> <span>TRAILER</span></a>
+                            <a href="#" class="btntype btnTrailer"><i class="fa-duotone fa-play"></i> <span>TRAILER</span></a>
                         </section>
                     </div>
                 </div>
@@ -431,9 +443,9 @@
                             <p class="btntype">Action</p>
                             <p class="btntype">Fantasy</p>
                         </section>
-                        <section class="boxTrailer d-none-990">
+                        <section class="boxTrailer">
                             <a href="#" class="btntype"><i class="fa-regular fa-eye fa-sm"></i> <span>82.K</span></a>
-                            <a href="#" class="btntype"><i class="fa-duotone fa-play"></i> <span>TRAILER</span></a>
+                            <a href="#" class="btntype btnTrailer"><i class="fa-duotone fa-play"></i> <span>TRAILER</span></a>
                         </section>
                     </div>
                 </div>
@@ -462,9 +474,9 @@
                             <p class="btntype">Action</p>
                             <p class="btntype">Fantasy</p>
                         </section>
-                        <section class="boxTrailer d-none-990">
+                        <section class="boxTrailer">
                             <a href="#" class="btntype"><i class="fa-regular fa-eye fa-sm"></i> <span>82.K</span></a>
-                            <a href="#" class="btntype"><i class="fa-duotone fa-play"></i> <span>TRAILER</span></a>
+                            <a href="#" class="btntype btnTrailer"><i class="fa-duotone fa-play"></i> <span>TRAILER</span></a>
                         </section>
                     </div>
                 </div>
@@ -493,9 +505,9 @@
                                     <p class="btntype">Action</p>
                                     <p class="btntype">Fantasy</p>
                                 </section>
-                                <section class="boxTrailer d-none-990">
+                                <section class="boxTrailer">
                                     <a href="#" class="btntype"><i class="fa-regular fa-eye fa-sm"></i> <span>82.K</span></a>
-                                    <a href="#" class="btntype"><i class="fa-duotone fa-play"></i> <span>TRAILER</span></a>
+                                    <a href="#" class="btntype btnTrailer"><i class="fa-duotone fa-play"></i> <span>TRAILER</span></a>
                                 </section>
                             </div>
                         </section>
@@ -506,23 +518,8 @@
             <!-- Number More Cards -->
             <div class="moreCardDanger">
                 <span class="numNav">
-                    <a class="active" href="#"><span>More</span> <i class="fa-light fa-chevron-down fa-xs ml-2"></i></a>
+                    <a class="active" href="./Seaction.html"><span>More</span> <i class="fa-light fa-chevron-down fa-xs ml-2"></i></a>
                 </span>
-            </div>
-            <!-- Number More Cards -->
-            <div class="moreCard p-1">
-                <a href="#">
-                    <i class="fa-light fa-arrow-left fa-lg"></i>
-                </a>
-                <span class="numNav">
-                    <a class="active" href="#">1</a>
-                    <a class="d-none-590" href="#">2</a>
-                    <a class="d-none-590" href="#">3</a>
-                    <a class="" href="#">22</a>
-                </span>
-                <a href="#">
-                    <i class="fa-light fa-arrow-right fa-lg"></i>
-                </a>
             </div>
         </div>
     </main>
