--- a/Item-Details.html
+++ b/Item-Details.html
@@ -324,8 +324,8 @@
                 <h3 style="letter-spacing: 10px;">Similar Offers</h3>
             </div>
             
-            <div class="row ">
-                <div class="col-2 boxImgs d-none-1460">
+            <div class="productRow">
+                <div class="boxImgs my-10 d-none-1460">
                     <section class="itemsCard">
                         <div class="overlaycards"></div>
                         <div class="Img">
@@ -356,7 +356,7 @@
                         </section>
                     </div>
                 </div>
-                <div class="col-2 boxImgs d-none-1190 d-inline-block-590">
+                <div class="boxImgs my-10 d-none-1190 d-inline-block-590">
                     <section class="itemsCard">
                         <div class="overlaycards"></div>
                         <div class="Img">
@@ -387,7 +387,7 @@
                         </section>
                     </div>
                 </div>
-                <div class="col-2 boxImgs">
+                <div class="boxImgs my-10">
                     <section class="itemsCard">
                         <div class="overlaycards"></div>
                         <div class="Img">
@@ -418,7 +418,7 @@
                         </section>
                     </div>
                 </div>
-                <div class="col-2 boxImgs">
+                <div class=" boxImgs my-10">
                     <section class="itemsCard">
                         <div class="overlaycards"></div>
                         <div class="Img">
@@ -449,7 +449,7 @@
                         </section>
                     </div>
                 </div>
-                <div class="col-2 boxImgs">
+                <div class=" boxImgs my-10">
                     <section class="itemsCard">
                         <div class="overlaycards"></div>
                         <div class="Img">
@@ -480,7 +480,7 @@
                         </section>
                     </div>
                 </div>
-                <div class="col-1 boxImgs d-none-990">
+                <div class="boxImgs my-10 d-none-990">
                     <div dir="rtl">
                         <section class="itemsCard">
                             <div class="overlaycards"></div>
