--- a/Seaction.html
+++ b/Seaction.html
@@ -304,7 +304,7 @@
     <!-- content -->
     <main class="content my-5">
         <div class="container-custom">            
-            <div class="row my-10">
+            <div class="productRow">
                 <div class="col-2 boxImgs d-none-1460">
                     <section class="itemsCard">
                         <div class="overlaycards"></div>
@@ -502,7 +502,7 @@
      <!-- content -->
      <main class="content my-5">
         <div class="container-custom">            
-            <div class="row my-10">
+            <div class="productRow">
                 <div class="col-2 boxImgs d-none-1460">
                     <section class="itemsCard">
                         <div class="overlaycards"></div>
@@ -700,7 +700,7 @@
      <!-- content -->
      <main class="content my-5">
         <div class="container-custom">            
-            <div class="row my-10">
+            <div class="productRow">
                 <div class="col-2 boxImgs d-none-1460">
                     <section class="itemsCard">
                         <div class="overlaycards"></div>
@@ -898,7 +898,7 @@
      <!-- content -->
      <main class="content my-5">
         <div class="container-custom">            
-            <div class="row my-10">
+            <div class="productRow">
                 <div class="col-2 boxImgs d-none-1460">
                     <section class="itemsCard">
                         <div class="overlaycards"></div>
@@ -1096,7 +1096,7 @@
      <!-- content -->
      <main class="content my-5">
         <div class="container-custom">            
-            <div class="row my-10">
+            <div class="productRow">
                 <div class="col-2 boxImgs d-none-1460">
                     <section class="itemsCard">
                         <div class="overlaycards"></div>
@@ -1294,7 +1294,7 @@
      <!-- content -->
      <main class="content my-5">
         <div class="container-custom">            
-            <div class="row my-10">
+            <div class="productRow">
                 <div class="col-2 boxImgs d-none-1460">
                     <section class="itemsCard">
                         <div class="overlaycards"></div>
@@ -1492,7 +1492,7 @@
      <!-- content -->
      <main class="content my-5">
         <div class="container-custom">            
-            <div class="row my-10">
+            <div class="productRow">
                 <div class="col-2 boxImgs d-none-1460">
                     <section class="itemsCard">
                         <div class="overlaycards"></div>
@@ -1690,7 +1690,7 @@
      <!-- content -->
      <main class="content my-5">
         <div class="container-custom">            
-            <div class="row my-10">
+            <div class="productRow">
                 <div class="col-2 boxImgs d-none-1460">
                     <section class="itemsCard">
                         <div class="overlaycards"></div>
@@ -1888,7 +1888,7 @@
      <!-- content -->
      <main class="content my-5">
         <div class="container-custom">            
-            <div class="row my-10">
+            <div class="productRow">
                 <div class="col-2 boxImgs d-none-1460">
                     <section class="itemsCard">
                         <div class="overlaycards"></div>
@@ -2086,7 +2086,7 @@
      <!-- content -->
      <main class="content my-5">
         <div class="container-custom">            
-            <div class="row my-10">
+            <div class="productRow">
                 <div class="col-2 boxImgs d-none-1460">
                     <section class="itemsCard">
                         <div class="overlaycards"></div>
@@ -2284,7 +2284,7 @@
      <!-- content -->
      <main class="content my-5">
         <div class="container-custom">            
-            <div class="row my-10">
+            <div class="productRow">
                 <div class="col-2 boxImgs d-none-1460">
                     <section class="itemsCard">
                         <div class="overlaycards"></div>
@@ -2482,7 +2482,7 @@
      <!-- content -->
      <main class="content my-5">
         <div class="container-custom">            
-            <div class="row my-10">
+            <div class="productRow">
                 <div class="col-2 boxImgs d-none-1460">
                     <section class="itemsCard">
                         <div class="overlaycards"></div>
