--- a/Item-Details.html
+++ b/Item-Details.html
@@ -15,7 +15,7 @@
 	<!--  font Awesome -->
 	<link href="asstes/fonts/all.min.css" rel="stylesheet">
 	<!--  Style css -->
-	<link href="asstes/css/style.css" rel="stylesheet">
+	<link href="asstes/css/style-item.css" rel="stylesheet">
     <title>Item-Detalis</title>
 </head>
 <body>
@@ -681,7 +681,7 @@
     <!--nice scroll-->
     
     <!-- Js Index Java Script -->
-    <script src="asstes/js/index.js"></script>
+    <script src="asstes/js/index-Item.js"></script>
 
 </body>
 </html>
