--- a/Item-Details.html
+++ b/Item-Details.html
@@ -157,7 +157,7 @@
                 </button>
                 
                 <button class="icon d-none d-lg-inline themeicons">
-                    <i  class="fa-light fa-lightbulb-on fa-lg themeicon btnLight"></i>
+                    <i  class="fa-solid fa-lightbulb-on fa-lg themeicon btnLight text-warning"></i>
                     <i  class="fa-light fa-moon fa-lg themeicon d-none"></i>
                 </button>
                 <ui class="icon d-none d-md-flex">
@@ -245,13 +245,13 @@
                     </div>
                     <div class="down-watch row">
                         <span id="" class=" col mt-4 p-0">
-                            <a class="watch text-white" href="#">
+                            <a class="watch text-white" href="./show-Room.html">
                                 <i class="fa-light fa-play fa-xl"></i>
                                 Watch Now
                             </a>
                         </span>
                         <span class=" col mt-4">
-                            <a class="down" href="#">
+                            <a class="down" href="/asstes/img/انترو تيتو موفيز أفلام 2022 أكشن • رعب • اثارة • خيال • سوبرهيروز ᴴᴰ.mp4">
                                 <i class="fa-light fa-download fa-xl"></i>
                                 Download Now
                             </a>
