--- a/index.html
+++ b/index.html
@@ -1,81 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--  Bootstrap v4.6.1 -->
+    <link href="asstes/css/bootstrap.css" rel="stylesheet">
+    <!--  Style css -->
+    <link href="asstes/css/test.css" rel="stylesheet">
     <title>test</title>
-</head>
-<body>
-    <!-- sidebar -->
-    <aside>
-        <header>
-            <!-- Logo -->
-            <a href="">logo</a>
-        </header>
-        <!-- tools aside -->
-        <div>
-            <ui>
-                <li>Home</li>
-                <li>About</li>
-                <li>content</li>
-                <li>..</li>
-            </ui>
-        </div>
-    </aside>
-    <!-- Navbar -->
-    <nav>
-       <div class="container">
-            <!-- logo -->
-            <div class="logo">
-                <a href="./Item-Details.html">logo</a>
-            </div>
-            <!-- tools nsv -->
-            <div>
-                <ui>
-                    <li>Home</li>
-                    <li>About</li>
-                    <li>content</li>
-                    <li>..</li>
-                </ui>
-            </div>
-            <!-- search -->
-            <div>
-                <form action="">
-                    <input type="search">
-                </form>
-            </div>
-       </div>
-    </nav>
-   <!-- header -->
-    <header>
-        <div class="container">
-        </div>
-    </header>
-    <!-- content -->
-    <main>
-        <div class="container">
-            <div class="row">
-                <div class="col-6"></div>
-                <div class="col-6"></div>
-            </div>
-            <div class="row">
-                <div class="col-4"></div>
-                <div class="col-8"></div>
-            </div>
-             <div class="row">
-                <div class="col-3"></div>
-                <div class="col-3"></div>
-                <div class="col-3"></div>
-                <div class="col-3"></div>
-            </div>
-        </div>
-    </main>
-    <!-- footer -->
-    <footer>
-        <div class="container">
-        </div>
-    </footer>
+    <link href="https://vjs.zencdn.net/8.3.0/video-js.css" rel="stylesheet" />
+    <!-- Video.js base CSS -->
+    <link href="https://unpkg.com/video.js@7/dist/video-js.min.css" rel="stylesheet" />
+    <!-- City -->
+    <link href="https://unpkg.com/@videojs/themes@1/dist/city/index.css" rel="stylesheet" />
 
+
+</head>
+
+<body>
+
+
+    <video id="my-video" class="video-js" controls preload="auto" width="640" height="264" poster="MY_VIDEO_POSTER.jpg"
+        data-setup="{}">
+        <source src="https://cdn.plyr.io/static/demo/View_From_A_Blue_Moon_Trailer-1080p.mp4" type="video/mp4" />
+        <p class="vjs-no-js">
+            web browser that
+            <a href="https://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a>
+        </p>
+    </video>
+
+    <script src="https://vjs.zencdn.net/8.3.0/video.min.js"></script>
 </body>
+
 </html>
