--- a/Seaction.html
+++ b/Seaction.html
@@ -49,29 +49,29 @@
         <div class="head "> 
             <div class="w-100 pb-4 d-flex justify-content-between" style="border-bottom: 1px solid #eeeeee42; ">
                 <span class="userAside"><span><i class="fa-solid fa-user-pen fa-xl"></i></span> jack bill</span>
-                <button id="closeSlider" class="d-lg-none"><i class="fa-regular fa-xmark fa-xl text-white mx-3"></i></button>
+                <button id="closeSlider" class="d-lg-none"><i class="fa-regular fa-xmark fa-xl mx-3"></i></button>
             </div>
         </div>
         <!-- navbar slider -->
-        <li class="listItem d-flex justify-content-between py-1 my-0">
-            <button class="icon d-inline-block d-lg-none themeicons text-warning">
+        <li class="btnfixed d-flex justify-content-between py-1 my-0">
+            <button class="icon d-inline-block d-lg-none themeicons">
                 <i  class="fa-light fa-moon fa-lg themeicon "></i>
                 <i  class="fa-light fa-lightbulb-on fa-lg themeicon d-none"></i>
             </button>
-            <a href="#" class="d-inline-block d-lg-none text-warning">
+            <a href="#" class="d-inline-block d-lg-none">
                 <i  class="fa-light fa-bell-on fa-lg"></i>
             </a>
-            <a href="#" class="d-inline-block d-lg-none text-warning">
+            <a href="#" class="d-inline-block d-lg-none">
                 <i class="fa-light fa-heart fa-lg"></i>
             </a>
         
         </li>
         <!-- Items -->
         <div class="itemAside">
-            <ui class="listAside">
+            <ul class="listAside">
                 <li class="listItem"><i class="fa-light fa-house fa-lg mr-4"></i> <a href="./index.html">Home</a></li>
                 <li class="listItem"><i class="fa-regular fa-chart-line-up fa-lg mr-4"></i> <a href="#">News</a></li>
-                <li class="listItem"><i class="fa-light fa-user fa-lg mr-4"></i> <a class="text-white" href="#">Profile</a></li>
+                <li class="listItem"><i class="fa-light fa-user fa-lg mr-4"></i> <a href="#">Profile</a></li>
                 <li class="listItem"><i class="fa-light fa-screwdriver-wrench fa-lg mr-4"></i></i> <a href="#">Admin</a></li>
                 <li class="listItem"><i class="fa-light fa-coins fa-lg mr-4"></i><a href="#"> Pricing plans</a></li>
                 <li class="listItem"><i class="fa-light fa-file-signature fa-lg mr-4"></i> <a href="#">Contacts</a></li>
@@ -79,28 +79,28 @@
                 <li class="listItem"><i class="fa-light fa-gear fa-lg mr-4"></i> <a href="#">About-Us</a></li>
                 
                 <li id="btn-series" class="listItem btnAction">
-                    <i class="fa-light fa-clapperboard-play fa-lg mr-4"></i> <a class="" href="#">Series</a> <i class="fa-light fa-chevron-down fa-2xs"></i>
-                    <ui>
+                    <i class="fa-light fa-clapperboard-play fa-lg mr-4"></i> <a href="#">Series</a> <i class="fa-light fa-chevron-down fa-2xs"></i>
+                    <ul>
                         <li class="dropSeries"><a href="#">English Series</a></li>
                         <li class="dropSeries"><a href="#">Arabic Series</a></li>
                         <li class="dropSeries"><a href="#">asia Series</a></li>
                         <li class="dropSeries"><a href="#">Indian Series</a></li>
                         <li class="dropSeries"><a href="#">Turkish Series</a></li>
                         <li class="dropSeries"><a href="#">Anime Series</a></li>
-                    </ui>
+                    </ul>
                 </li>
                 <li id="btn-movies" class="listItem">
-                    <i class="fa-light fa-popcorn fa-lg mr-4"></i> <a class="text-white" href="#"><button class="text-white">Movies</button></a> <i class="fa-light fa-chevron-down fa-2xs"></i>
-                    <ui>
+                    <i class="fa-light fa-popcorn fa-lg mr-4"></i> <a href="#"><button>Movies</button></a> <i class="fa-light fa-chevron-down fa-2xs"></i>
+                    <ul>
                         <li class="dropMovie"><a href="#">English movies</a></li>
                         <li class="dropMovie"><a href="#">Arabic Movies</a></li>
                         <li class="dropMovie"><a href="#">asia movies</a></li>
                         <li class="dropMovie"><a href="#">Indian movies</a></li>
                         <li class="dropMovie"><a href="#">Turkish movies</a></li>
                         <li class="dropMovie"><a href="#">Anime movies</a></li>
-                    </ui>
+                    </ul>
                 </li>
-            </ui>
+            </ul>
         </div>
     </aside>
 
