--- a/Seaction.html
+++ b/Seaction.html
@@ -23,9 +23,9 @@
     <section id="bubbleTrailer">
         <div class="sectionTrailer">
             <div class="stop Fast-Information-Head fixed-top m-3">
-                <button class="close-trailer stop"><i class='fa-solid fa-regular fa-xmark fa-lg'></i></button>
+                <button class="close-trailer stop btn btn-light"><i class='fa-solid fa-regular fa-xmark fa-lg'></i></button>
             </div>
-            <iframe class="stop" style="width: 100%;height: 500px;" src="https://www.youtube.com/embed/ngWBddVNVZs"
+            <iframe class="stop" style="width: 100%;height: 500px;" src="https://www.youtube.com/embed/mkomfZHG5q4"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen>
@@ -33,7 +33,7 @@
         </div>
     </section>
     <!-- Loading -->
-    <div id="js-preloader" class="load loaded">
+    <div id="js-preloader" class="load">
         <div class="loader">
             <a class="logo" href="#">Blur.<span>TV</span></a>
             <div class="inner one"></div>
