--- a/Seaction.html
+++ b/Seaction.html
@@ -15,6 +15,7 @@
 	<!--  font Awesome -->
 	<link href="asstes/fonts/all.min.css" rel="stylesheet">
 	<!--  Style css -->
+    <link href="asstes/css/style-shared.css" rel="stylesheet">
 	<link href="asstes/css/style-section.css" rel="stylesheet">
     <title>Sections</title>
 </head>
@@ -32,6 +33,8 @@
             </iframe>
         </div>
     </section>
+    <!-- End  -->
+
     <!-- Loading -->
     <div id="js-preloader" class="load">
         <div class="loader">
@@ -55,14 +58,14 @@
         <!-- navbar slider -->
         <li class="btnfixed d-flex justify-content-between py-1 my-0">
             <button class="icon d-inline-block d-lg-none themeicons">
-                <i  class="fa-light fa-moon fa-lg themeicon "></i>
-                <i  class="fa-light fa-lightbulb-on fa-lg themeicon d-none"></i>
+                <i  class="fa-solid fa-moon fa-lg themeicon "></i>
+                <i  class="fa-solid fa-lightbulb-on fa-lg themeicon d-none"></i>
             </button>
             <a href="#" class="d-inline-block d-lg-none">
-                <i  class="fa-light fa-bell-on fa-lg"></i>
+                <i  class="fa-solid fa-bell-on fa-lg"></i>
             </a>
             <a href="#" class="d-inline-block d-lg-none">
-                <i class="fa-light fa-heart fa-lg"></i>
+                <i class="fa-solid fa-heart fa-lg"></i>
             </a>
         
         </li>
@@ -100,12 +103,14 @@
                         <li class="dropMovie"><a href="#">Anime movies</a></li>
                     </ul>
                 </li>
+                <li class="listItem"><i class="fa-light fa-right-from-bracket fa-lg mr-4"></i> <a href="#">Log out</a></li>
             </ul>
         </div>
     </aside>
+    <!-- End -->
 
     <!-- Navbar -->
-    <nav>
+    <nav id="navbar">
         <section id="sectionSearch">
             <div class="sectionSearch">
                 <form>
@@ -120,10 +125,10 @@
         </section>
         <div class="container-custom">
             <!-- logo -->
-            <a href="./index.html" class="logo navbar-brand">Blur.<span>TV</span></a>
+            <a href="./index.html" class="logo">Blur.<span>TV</span></a>
             <!-- tools nsv -->
             <div class="d-md-none d-lg-inline-block toolsNav">
-                <ui class="item-nav d-none d-md-flex">
+                <ul class="item-nav d-none d-md-flex">
                     <li><a class="hvr" href="index.html">Home</a></li>
                     <li><a class="hvr" href="./Seaction.html">News</a></li>
                     <li class="position-relative">
@@ -159,7 +164,7 @@
                             <a href="#">Pricing plans</a>
                         </div>
                     </li>
-                </ui>
+                </ul>
             </div>
            <!-- icons -->
             <div class="iconsnav">
@@ -171,21 +176,22 @@
                     <i  class="fa-solid fa-lightbulb-on fa-lg themeicon btnLight text-warning"></i>
                     <i  class="fa-light fa-moon fa-lg themeicon d-none"></i>
                 </button>
-                <ui class="icon d-none d-md-flex">
+                <ul class="icon d-none d-md-flex">
                     <a href="">Sign in</a>
-                </ui>
+                </ul>
                 <button id="openSlider" class="d-lg-none">
                     <i class="fa-light fa-bars-staggered fa-lg"></i>
                 </button>
             </div>
         </div>
     </nav>
+    <!-- End  -->
     
     <!-- header -->
-    <header>
-        <div class="container-custom">
+    <header class="mt-5">
+        <div class="container-custom mt-5">
             <!-- Title Section -->
-            <div class="w-100 pb-2 mb-2 titleSections">
+            <div class="w-100 pb-2 mb-2 titleSections mt-4">
                 <h3 style="letter-spacing: 10px;"><i class="fa-solid fa-clapperboard-play fa-xl"></i> Movies</h3>
                 <span><a href="./Seaction.html">Movies</a> | <a href="./index.html">Home</a></span>
             </div>
@@ -2294,7 +2300,7 @@
 			</div>
 		</div>
 	</footer>
-	<!-- end footer -->
+	<!-- end -->
 
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js" integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE" crossorigin="anonymous"></script>
