--- a/Item-Details.html
+++ b/Item-Details.html
@@ -17,7 +17,7 @@
 	<!--  Style css -->
     <link href="asstes/css/style-shared.css" rel="stylesheet">
 	<link href="asstes/css/style-item.css" rel="stylesheet">
-    <title>Item-Detalis</title>
+    <title>Blur.tv Item-Detalis</title>
 </head>
 <body>
 
