--- a/Seaction.html
+++ b/Seaction.html
@@ -17,7 +17,7 @@
 	<!--  Style css -->
     <link href="asstes/css/style-shared.css" rel="stylesheet">
 	<link href="asstes/css/style-section.css" rel="stylesheet">
-    <title>Sections</title>
+    <title>Blur.tv Sections</title>
 </head>
 <body>
     <!-- bubble Trailer -->
