--- a/show-Room.html
+++ b/show-Room.html
@@ -26,7 +26,7 @@
     <!-- Loading -->
     <div id="js-preloader" class="load">
         <div class="loader">
-            <a class="logo" href="#">Blur.<span>TV</span></a>
+            <a class="logo animate__animated animate__hinge" href="#">Blur.<span class="">TV</span></a>
             <div class="inner one"></div>
             <div class="inner two"></div>
             <div class="inner three"></div>
@@ -37,8 +37,8 @@
     <!-- bubble Trailer -->
     <section id="bubbleTrailer">
         <div class="sectionTrailer">
-            <div class="stop Fast-Information-Head fixed-top m-3">
-                <button class="close-trailer stop btn btn-light"><i class='fa-solid fa-regular fa-xmark fa-lg'></i></button>
+            <div class="stop fixed-top m-3">
+                <button class="close-trailer stop btn btn-light"><i class='fa-regular fa-arrow-left fa-xl'></i></button>
             </div>
             <iframe class="stop" style="width: 100%;height: 500px;" src="https://www.youtube.com/embed/mkomfZHG5q4"
                 title="YouTube video player" frameborder="0"
@@ -47,10 +47,10 @@
             </iframe>
         </div>
     </section>
-    <!-- End -->
+    <!-- card -->
 
     <!-- sidebar -->
-    <aside class="d-none ">
+    <aside>
         <!-- User -->
         <div class="head "> 
             <div class="w-100 pb-4 d-flex justify-content-between" style="border-bottom: 1px solid #eeeeee42; ">
